bin/anansi/src/app/ui/snapshots/node_list_selection_changes_details.snap
---
source: bin/anansi/src/app/ui/tests.rs
expression: redacted
---
anansi k(n)ows about nodes in system initiative                                                     
┌Filter────────────────────────────────────────────────────────────────────────────────────────────┐
│Press / to filter by node weight kind, ID, or name                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Nodes (2/15)──────────────────────────┐┌Node Details──────────────────────────────────────────────┐
│    ID     Node W Name                ││Node Weight Kind: Category                                │
│[ ] [ULID] Catego Overlays            ││ID: [ULID]                            │
│[•] [ULID] Catego DefaultSubscriptionS││UTC Timestamp in ULID: [TIMESTAMP]                │
│[ ] [ULID] Conten Root                ││Lineage ID: [ULID]                    │
│[ ] [ULID] Catego Action              ││Merkle Tree Hash: 8c3e89b26c162e5252764099402dbc8c        │
│[ ] [ULID] Catego Component           ││                                                          │
│[ ] [ULID] Catego DeprecatedActionBatc│└──────────────────────────────────────────────────────────┘
│[ ] [ULID] Catego Func                │┌Edges (out: 0, in: 1) [1/1]───────────────────────────────┐
│[ ] [ULID] Catego Module              ││Outgoing:                                                 │
│[ ] [ULID] Catego Schema              ││  (none)                                                  │
│[ ] [ULID] Catego Secret              ││                                                          │
│[ ] [ULID] Catego DependentValueRoots ││Incoming:                                                 │
│                                      ││[ ]  ← Use { is_default: false } - Content ([ULID]│
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
┌Edit History──────────────────────────────────────────────────────────────────────────────────────┐
│No edits yet. Press 'e' to edit the selected node.                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab: Panels | /: Filter | e: Edit | a: Add Edge | d: Delete | u: Undo | q: Quit
